<?xml version="1.0" encoding="utf-8"?>
    <!--TODO add xsd-->
<videos xmlns:tools="http://schemas.android.com/tools"
    tools:context=".VideoListActivity">
    <video
        id="shacharit"
        image="@drawable/shacharit"
        title="@string/shacharit"
        video="@raw/shacharit">
        <parts>
            <!--The order here should be backwards :( -->
            <part value="@string/eighteen" />
            <part value="@string/shma" />
            <part value="@string/morning_prayer" />
        </parts>
    </video>

    <video
        id="minha"
        image="@drawable/minha"
        title="@string/minha">
        <parts>
            <!--The order here should be backwards :( -->
            <part value="@string/we_must_praise" />
            <part value="@string/eighteen" />
            <part value="@string/ashrei" />
        </parts>
    </video>

    <video
        id="arvit"
        image="@drawable/arvit"
        title="@string/arvit">
        <parts>
            <!--The order here should be backwards :( -->
            <part value="@string/we_must_praise" />
            <part value="@string/eighteen" />
            <part value="@string/ashrei" />
            <part value="@string/shma" />
        </parts>
    </video>
</videos>